[package]
name = "datafusion-wasm"
version = "0.1.0"
authors = ["PixelCities"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = [ "serde-serialize" ]}
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.55" , features = [ "console" ]}
js-sys = "0.3.55"
futures-channel-preview = "0.3.0-alpha.18"
uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}

datafusion = { path = "../arrow-datafusion/datafusion" }

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

# https://github.com/tkaitchuck/ahash/issues/95
[dependencies.indexmap]
version = "~1.6.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

